<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">WelschWebApp</string>
    <string name="nav_header_subtitle" translatable="false">https://github.com/Benni013/WelschWebApp</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Fragment Titles -->
    <string name="title_activity_settings">Settings</string>
    <string name="menu_cloud">Cloud</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_pihole">Pi-hole</string>
    <string name="menu_website">Website</string>
    <string name="menu_php_info">PHP info</string>

    <!-- Preferences -->
    <string name="settings_header">Settings</string>
    <string name="night_mode_title">Night mode</string>
    <string name="private_title">Private Access</string>
    <string name="automatic">Automatic</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="user">User</string>
    <string name="password">Password</string>
</resources>